fix: remove invisible state from like counter

--- a/src/blocks/card/__like-counter/card__like-counter.css
+++ b/src/blocks/card/__like-counter/card__like-counter.css
@@ -6,7 +6,4 @@
   text-align: center;
   color: #000;
   margin: 3px 0 0 0;
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
 }
